--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 <body>
-	<!-- WHY DOES THE FOLLOWING DIV'S ID HAVE A HASHTAG IN IT? -->
-	<div class="section">
+	<div class="home flex-container">
 		<div class="flex-container navbar"> 
-			<a class="nav-link" href="about"> <button class="nav-title">about</h1> </button> </a>
-			<a class="nav-link" href="faq"> <button class="nav-title">faq</h1> </button> </a>
+			<a class="nav-link" href="#about"> <button class="nav-title">about</h1> </button> </a>
+			<a class="nav-link" href="#faq"> <button class="nav-title">faq</h1> </button> </a>
 			<button type="button" class="apply-button">apply here</button>
 		</div>
-		<div class="img">
-			<img src="./redefined_deck-04.png" class="splash" height="90%" width="80%"/>
-		</div>
+		<div class="home-img"> </div>
 	</div> 
-	<div class="content-section" id="about">
+	<div id="about" class="content-section">
 		<img class="about-img" src="./path.png" width="20%" height="40%" />
 		<h1 class="section-title"> about </h1>
 		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. </h3>
@@ -45,7 +42,7 @@
 		<h3 class="about-text"> According to <span style="color: #83A2D4"> IDEO</span>, design thinking utilizes elements from the designer's toolkit like empathy and experimentation to arrive at innovative solutions. </h3>
 		</div>
 	</div>
-	<div class="content-section" id="#faq">
+	<div id="faq" class="content-section">
 		<h1 class="section-title"> faq </h1>
 		<div class="faq-content">
 			<h2> design thinking faq </h2>
