Link to apply button, previous medium article and reformatted FAQ section

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 	<link rel="stylesheet" href="base.css" type="text/css" /> 
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="home flex-container">
 		<div class="flex-container navbar"> 
 			<a class="nav-link" href="#about"> <button class="nav-title">about</h1> </button> </a>
 			<a class="nav-link" href="#faq"> <button class="nav-title">faq</h1> </button> </a>
-			<button type="button" class="apply-button">apply here</button>
+			<button type="button" class="apply-button"><a href="https://www.facebook.com/events/2284814805171199/" class="text-link-apply">apply here</a></button>
 		</div>
 		<div class="home-img"> </div>
 	</div> 
 	<div id="about" class="content-section">
 		<img class="about-img" src="./path.png" width="20%" height="40%" />
 		<h1 class="section-title"> about </h1>
-		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. </h3>
+		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. You can learn more about last year's Designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here. </a></h3>
 		<div class="circle-group">
 			<h2> (re)frame </h2>
 			<div class="circle-frame"></div>
