Added svg's for circle lines

--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
 		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. You can learn more about last year's Designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here. </a></h3>
 		<div class="circle-group">
 			<h2> (re)frame </h2>
-			<div class="circle-frame"></div>
+			<!-- <div class="circle-frame"></div>
 			<div class="circle"></div>
-			<div class="circle"></div>
+			<div class="circle"></div> -->
+			<img class="circle-lines" src="./Circles-1.svg" />
 		</div>
 		<div class="circle-group">
 			<h2>(re)iterate</h2>
-			<div class="circle-iterate"></div>
+			<!-- <div class="circle-iterate"></div>
 			<div class="circle"></div>
-			<div class="circle"></div>
+			<div class="circle"></div> -->
+			<img class="circle-lines" src="./Circles-2.svg" />
 		</div>
 		<div class="circle-group">
 			<h2> (re)invent </h2>
+			<!-- <div class="circle"></div>
 			<div class="circle"></div>
-			<div class="circle"></div>
-			<div class="circle"></div>
+			<div class="circle"></div> -->
+			<img class="circle-lines" src="./Circles-3.svg" />
 		</div>
 		<h1> what is design thinking? 
 		</h1>
