--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="flex-container navbar"> 
 			<a class="nav-link" href="#about"> <button class="nav-title">about</h1> </button> </a>
 			<a class="nav-link" href="#faq"> <button class="nav-title">faq</h1> </button> </a>
-			<button type="button" class="apply-button"><a href="https://www.facebook.com/events/2284814805171199/" class="text-link-apply">apply here</a></button>
+			<button type="button" class="apply-button"><a href="https://tinyurl.com/designathon19" class="text-link-apply">apply here</a></button>
 		</div>
 		<div class="home-img"> </div>
 	</div> 
