Updated event description with date

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="about" class="content-section">
 		<img class="about-img" src="./path.png" width="20%" height="40%" />
 		<h1 class="section-title"> about </h1>
-		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. You can learn more about last year's Designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here. </a></h3>
+		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. This year's competition will be taking place on April 6th. You can learn more about last year's Designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here. </a></h3>
 		<div class="circle-group">
 			<h2> (re)frame </h2>
 			<!-- <div class="circle-frame"></div>
