New amination and scroll jquery function. took 4.5 hours

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 			</div>
 			<button type="button" class="apply-button"><a href="tinyurl.com/designathon19" class="text-link-apply">apply here</a></button>
 		</div>
-		<div class="home-img"> </div>
+		<div class="home-img splashh">
+			<div id="circleHolder"> </div>
+			<div class="splashBackground"> </div>
+		 </div>
 	</div> 
 	<div id="about" class="content-section">
 		<img class="about-img" src="./path.png" width="20%" height="40%" />
@@ -89,6 +92,7 @@
 		<br />
 	</div>
 <script src="base.js"></script>
+<script src="faded.js"></script>
 </body>
 </html>
 
