fixed the application button link, and fixes to the new animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<a class="nav-link" href="#about"> <button class="nav-title">about</h1> </button> </a>
 				<a class="nav-link" href="#faq"> <button class="nav-title">faq</h1> </button> </a>
 			</div>
-			<button type="button" class="apply-button"><a href="tinyurl.com/designathon19" class="text-link-apply">apply here</a></button>
+			<button type="button" class="apply-button"><a href="https://docs.google.com/forms/d/13u7Z0yp5TP48eB1WCdUyoLN05ROkW3h6H-IyBLBN5q4/viewform?edit_requested=true&fbclid=IwAR2ARlZzsqngPtn9d5vKQncePa5iC4ZlHrf4WNoybmHdhqhCm4QN_CmA_pQ" class="text-link-apply">apply here</a></button>
 		</div>
 		<div class="home-img splashh">
 			<div id="circleHolder"> </div>
