Modified apply date bug

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</div>
 			<button class="accordion"> When is the application deadline? </button>
 			<div class="panel">
-				<p> We will be bringing in industry experts as speakers and to host workshops, and you have the opportunity to network with any of these people. Additionally, there will be companies who will set up tables for the purpose of recruiting, so feel free to bring your resume and portfolio!   </p>
+				<p> Be sure to apply before March 24th!  </p>
 			</div>
 		</div>
 		<br />
