Modified apply button

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			</div>
 			<button class="accordion"> When is the application deadline? </button>
 			<div class="panel">
-				<p> Be sure to apply before March 24th!  </p>
+				<p> Be sure to apply before March 24th using the apply buttom above!  </p>
 			</div>
 		</div>
 		<br />
