Made apply deadline and ID FAQ changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<h2> designathon faq </h2>
 			<button class="accordion"> When is it? </button>
 			<div class="panel">
-				<p> Designathon will be held on April 6th this year. Be sure to apply before March 24th! </p>
+				<p> Designathon will be held on April 6th this year. Be sure to apply before April 4th! </p>
 			</div>
 			<button class="accordion"> Who can attend? </button>
 			<div class="panel">
@@ -81,11 +81,11 @@
 			</div>
 			<button class="accordion"> What should I bring? </button>
 			<div class="panel">
-				<p> Bring your Bruin photo ID or any state-issued ID to check in to the event.  </p>
+				<p> Bring your Bruin photo ID or any government-issued ID to check in to the event.  </p>
 			</div>
 			<button class="accordion"> When is the application deadline? </button>
 			<div class="panel">
-				<p> Be sure to apply before March 24th using the apply button above!  </p>
+				<p> Be sure to apply before April 4th using the apply button above!  </p>
 			</div>
 		</div>
 		<br />
