initial schedule setup and circles changes

--- a/index.html
+++ b/index.html
@@ -27,31 +27,59 @@
 		<img class="about-img" src="./path.png" width="20%" height="40%" />
 		<h1 class="section-title"> about </h1>
 		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. This year's competition will be taking place on April 6th. You can learn more about last year's Designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here. </a></h3>
-		<div class="circle-group">
-			<h2> (re)frame </h2>
-			<!-- <div class="circle-frame"></div>
-			<div class="circle"></div>
-			<div class="circle"></div> -->
-			<img class="circle-lines" src="./Circles-1.svg" />
-		</div>
-		<div class="circle-group">
-			<h2>(re)iterate</h2>
-			<!-- <div class="circle-iterate"></div>
-			<div class="circle"></div>
-			<div class="circle"></div> -->
-			<img class="circle-lines" src="./Circles-2.svg" />
-		</div>
-		<div class="circle-group">
-			<h2> (re)invent </h2>
-			<!-- <div class="circle"></div>
-			<div class="circle"></div>
-			<div class="circle"></div> -->
-			<img class="circle-lines" src="./Circles-3.svg" />
-		</div>
 		<div style="display: flex; flex-direction: column;">
 			<h1 style="z-index: 1;"> what is design thinking? 
 			</h1>
 			<h3 class="about-text"> According to <span style="color: #83A2D4"> IDEO</span>, design thinking utilizes elements from the designer's toolkit like empathy and experimentation to arrive at innovative solutions. </h3>
+		</div>
+		<div class="circle-group">
+			<h2> (re)frame </h2>
+			<img class="circle-lines" src="./Circles-1.svg" />
+		</div>
+		<div class="circle-group">
+			<h2>(re)iterate</h2>
+			<img class="circle-lines" src="./Circles-2.svg" />
+		</div>
+		<div class="circle-group">
+			<h2> (re)invent </h2>
+			<img class="circle-lines" src="./Circles-3.svg" />
+		</div>
+	</div>
+	<div id="schedule" class="content-section">
+		<h1 class="section-title"> schedule </h1>
+			<div style="overflow-y: auto; height: 50%">
+			<table class="hoverTable">
+				<tbody>
+					<tr>
+						<td class="table_time"> <b>8:30 AM</b> </td>
+						<td> check-in </td>
+					</tr>
+					<tr> 
+						<td class="table_time"> <b>9:00 AM</b> </td>
+						<td> intro to UX | design challenge </td>
+					</tr>
+					<tr> 
+						<td class="table_time"> <b>10:00 AM</b> </td>
+						<td> <span style="color: #83A2D4"> ideating </span> with Northrup Grumman </td>
+					</tr>
+					<tr>
+						<td class="table_time"> <b>11:00 AM</b> </td>
+						<td> think break with activities </td>
+					</tr>
+					<tr> 
+						<td class="table_time"> <b>11:30 AM</b> </td>
+						<td> <span style="color: #83A2D4"> visualizing </span> with TicketMaster </td>
+					</tr>
+					<tr> 
+						<td class="table_time"> <b>12:30 PM</b> </td>
+						<td> lunch on the hill </td>
+					</tr>
+					<tr>
+						<td class="table_time"> <b>1:30 PM</b> </td>
+						<td> <span style="color: #83A2D4"> prototyping </span> with creative labs </td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</div>
 	<div id="faq" class="content-section">
