Modified circle colors

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<img class="circle-lines" src="./Circles-2.svg" />
 		</div>
 		<div class="circle-group">
-			<h2> (re)invent </h2>
+			<h2> <span style="color: #EF9C9D"> (re)invent </span> </h2>
 			<img class="circle-lines" src="./Circles-3.svg" />
 		</div>
 	</div>
