--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div id="about" class="content-section">
 		<img class="about-img" src="./path.png" width="20%" height="40%" />
 		<h1 class="section-title"> about </h1>
-		<h3 class="about-text"> Designathon is a beginner-friendly, human-centered design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA. This year's competition will be taking place on April 6th. You can learn more about last year's Designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here. </a></h3>
+		<h3 class="about-text"> Designathon is a beginner-friendly, experience design competition hosted by Bruin Entrepreneurs with the goal of fostering design thinking at UCLA through a series of workshops, culminating in a final competition. The event will be held in Carnesale Commons in the Palisades Room. Find out more about last year's designathon <a href="https://medium.com/bruin-entrepreneurs-stories/designathon-2018-1a82282f1448" class="text-link"> here! </a></h3>
 		<div class="circle-group">
 			<h2> (re)frame </h2>
 			<!-- <div class="circle-frame"></div>
@@ -77,7 +77,7 @@
 			</div>
 			<button class="accordion"> How do I prepare? </button>
 			<div class="panel">
-				<p> Don’t worry too much on your part as an attendee! We will tailor a curriculum through our Bruin Entrepreneurs Facebook page with plenty of articles and Medium content produced by our team members to prepare you for the day.  </p>
+				<p> To prepare for the day of the event, you will need to bring some form of ID for check in. In terms of how to prepare for the final competition, you will not need to do prior research on design thinking because our workshops will be catered towards guiding you in the process of completing each step of your project by teaching the design thinking cycle, but it's highly suggested! Check our Facebook event page <a href="https://www.facebook.com/events/2284814805171199/" class="text-link"> here </a> for more resources.  </p>
 			</div>
 			<button class="accordion"> What should I bring? </button>
 			<div class="panel">
