Minor FAQ change

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			</div>
 			<button class="accordion"> How do I prepare? </button>
 			<div class="panel">
-				<p> To prepare for the day of the event, you will need to bring some form of ID for check in. In terms of how to prepare for the final competition, you will not need to do prior research on design thinking because our workshops will be catered towards guiding you in the process of completing each step of your project by teaching the design thinking cycle, but it's highly suggested! Check our Facebook event page <a href="https://www.facebook.com/events/2284814805171199/" class="text-link"> here </a> for more resources.  </p>
+				<p> To prepare for the day of the event, you will need to bring some form of ID for check in and a laptop to work on. In terms of how to prepare for the final competition, you will not need to do prior research on design thinking because our workshops will be catered towards guiding you in the process of completing each step of your project by teaching the design thinking cycle, but it's highly suggested! Check our Facebook event page <a href="https://www.facebook.com/events/2284814805171199/" class="text-link">here</a> for more resources.  </p>
 			</div>
 			<button class="accordion"> What should I bring? </button>
 			<div class="panel">
