modified schedule section UI

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</div>
 	<div id="schedule" class="content-section">
 		<h1 class="section-title"> schedule </h1>
-			<div style="overflow-y: auto; height: 50%">
+			<div class="schedule_wrapper">
 			<table class="hoverTable">
 				<tbody>
 					<tr>
@@ -77,6 +77,18 @@
 					<tr>
 						<td class="table_time"> <b>1:30 PM</b> </td>
 						<td> <span style="color: #83A2D4"> prototyping </span> with creative labs </td>
+					</tr>
+					<tr> 
+						<td class="table_time"> <b> 2:30 PM </b> </td>
+						<td> design time </td>
+					</tr>
+					<tr>
+						<td class="table_time"> <b> 4:00 PM </b> </td>
+						<td> design in industry panel </td>
+					</tr>
+					<tr> 
+						<td class="table_time"> <b> 5:00 PM </b> </td>
+						<td> closing ceremony </td>
 					</tr>
 				</tbody>
 			</table>
