--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="base.css" type="text/css" /> 
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet" type="text/css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
@@ -54,6 +54,38 @@
 			<h3 class="about-text"> According to <span style="color: #83A2D4"> IDEO</span>, design thinking utilizes elements from the designer's toolkit like empathy and experimentation to arrive at innovative solutions. </h3>
 		</div>
 	</div>
+
+	<div id="speakers" class="content-section">
+		<h1 class="section-title"> speakers </h1>
+		<div id="speakers-flex" class="flex-container">
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/kelly.png">
+				<h3 id="speaker-name">Kelly Wald</h3>
+				<p class="speak-pos">UX Design Lead</p>
+				<p class="speak-org">Disney</p>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/chengsu.png">
+				<h3 id="speaker-name">Chengsu Chen</h3>
+				<p class="speak-pos">Product Designer</p>
+				<p class="speak-org">Facebook</p>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/chris.png">
+				<h3 id="speaker-name">Chris Alonso</h3>
+				<p class="speak-pos">Designer/Brand</p>
+				<p class="speak-org">Zealer Appeal</p>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/jeff.png">
+				<h3 id="speaker-name">Jeff Morris</h3>
+				<p class="speak-pos">Product Director</p>
+				<p class="speak-org">Tinder</p>
+			</div>
+		</div>
+	</div>
+
+
 	<div id="faq" class="content-section">
 		<h1 class="section-title"> faq </h1>
 		<div class="faq-content">
