Added judges, workshops, mentors section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,63 @@
 			</div>
 		</div>
 	</div>
-
+	<div id="speakers" class="content-section">
+		<h1 class="section-title"> judges, workshop hosts, and mentors </h1>
+		<div id="speakers-flex" class="flex-container">
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/amanda_muller.png">
+				<h3 id="speaker-name">Amanda Muller</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/shivani_desai.png">
+				<h3 id="speaker-name">Shivani Desai</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/travis_clarke.png">
+				<h3 id="speaker-name">Travis Clarke</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/myong_sung.png">
+				<h3 id="speaker-name">Myong Sung</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/ed_tien.png">
+				<h3 id="speaker-name">Ed Tien</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/natalie_huynh.png">
+				<h3 id="speaker-name">Natalie Huynh</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/julia_walck.png">
+				<h3 id="speaker-name">Julia Walck</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/brandon_melchior.png">
+				<h3 id="speaker-name">Brandon Melchior</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/dan_selden.png">
+				<h3 id="speaker-name">Dan Selden</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/zachary_hubbard.png">
+				<h3 id="speaker-name">Zachary Hubbard</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/alexander_schroeder.png">
+				<h3 id="speaker-name">Alexander Schroeder</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/drey_cameron.png">
+				<h3 id="speaker-name">Drey Cameron</h3>
+			</div>
+			<div id="speaker-card">
+				<img class="speaker-pics" src="speaker_pics/clint_cebulak.png">
+				<h3 id="speaker-name">Clint Cebulak</h3>
+			</div>
+		</div>
+	</div>
 
 	<div id="faq" class="content-section">
 		<h1 class="section-title"> faq </h1>
@@ -209,6 +265,7 @@
 		<br />
 		<br />
 	</div>
+	<div
 <script src="base.js"></script>
 <script src="faded.js"></script>
 </body>
