--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
 		<br />
 		<br />
 	</div>
+	<div id="sponsors" class="content-section">
+		<h1 class="section-title"> sponsors 
+		</h1>
+		<div class="sponsorsflex flex-container">
+			<img class="sponsorimg" src="sponsor_logos/north.png"/>
+			<img class="sponsorimg" src="sponsor_logos/ticket.png"/>
+			<img class="sponsorimg" src="sponsor_logos/sketch.png"/>
+			<img class="sponsorimg" src="sponsor_logos/startup.png"/>
+			<img class="sponsorimg"src="sponsor_logos/linode.png" />
+		</div>
+	</div>
 <script src="base.js"></script>
 <script src="faded.js"></script>
 </body>
