Hover on speakers shows description

--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
 		<h1 class="section-title"> speakers </h1>
 		<div id="speakers-flex" class="flex-container">
 			<div id="speaker-card">
-				<img class="speaker-pics" src="speaker_pics/kelly.png">
+				<div class="speaker-pic-container">
+					<img class="speaker-pics" src="speaker_pics/kelly.png">
+					<p class="speaker_hover_text_title">Northrop Grumman</h1>
+					<p class="speaker_hover_text">Sr Staff Engineer Judge</p>
+				</div>
 				<h3 id="speaker-name">Kelly Wald</h3>
 				<p class="speak-pos">UX Design Lead</p>
 				<p class="speak-org">Disney</p>
