--- a/index.html
+++ b/index.html
@@ -178,56 +178,78 @@
 		<h1 class="section-title"> judges, workshop hosts, and mentors </h1>
 		<div id="speakers-flex" class="flex-container">
 			<div id="speaker-card">
-				<img class="speaker-pics" src="speaker_pics/amanda_muller.png">
+				<img class="speaker-pics" src="speaker_pics/amanda_muller.png" title="Amanda">
 				<h3 id="speaker-name">Amanda Muller</h3>
+				<p class="speak-pos"> Judge </p>
+				<p class="speak-pos"> Sr. Staff Systems Engineer</p>
+				<p class="speak-org"> Northrup Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/shivani_desai.png">
 				<h3 id="speaker-name">Shivani Desai</h3>
+				<p class="speak-pos"> Mentor </p>
+				<p class="speak-pos"> Principal Software Engineer</p>
+				<p class="speak-org"> Northrup Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/travis_clarke.png">
 				<h3 id="speaker-name">Travis Clarke</h3>
+				<p class="speak-pos"> Workshop Host </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/myong_sung.png">
 				<h3 id="speaker-name">Myong Sung</h3>
+				<p class="speak-pos"> Workshop Host </p>
+				<p class="speak-pos"> Engineering Manager </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/ed_tien.png">
 				<h3 id="speaker-name">Ed Tien</h3>
+				<p class="speak-pos"> Mentor </p>
+				<p class="speak-pos"> Talent Acquisition</p>
+				<p class="speak-org"> Northrup Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/natalie_huynh.png">
 				<h3 id="speaker-name">Natalie Huynh</h3>
+				<p class="speak-pos"> Senior Designer </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/julia_walck.png">
 				<h3 id="speaker-name">Julia Walck</h3>
+				<p class="speak-pos"> Senior Graphic Designer </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/brandon_melchior.png">
 				<h3 id="speaker-name">Brandon Melchior</h3>
+				<p class="speak-pos"> Judge </p>
+				<p class="speak-pos"> Sr Director – Design </p>
+				<p class="speak-org"> TicketMaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/dan_selden.png">
 				<h3 id="speaker-name">Dan Selden</h3>
-			</div>
-			<div id="speaker-card">
-				<img class="speaker-pics" src="speaker_pics/zachary_hubbard.png">
-				<h3 id="speaker-name">Zachary Hubbard</h3>
+				<p class="speak-pos"> Mentor </p>
+				<p class="speak-pos"> Sr. Product Designer II </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/alexander_schroeder.png">
 				<h3 id="speaker-name">Alexander Schroeder</h3>
+				<p class="speak-pos"> Mentor </p>
+				<p class="speak-pos"> Contractor </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/drey_cameron.png">
 				<h3 id="speaker-name">Drey Cameron</h3>
+				<p class="speak-pos"> Judge </p>
+				<p class="speak-pos"> Director - Product Design</p>
+				<p class="speak-org"> TicketMaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/clint_cebulak.png">
 				<h3 id="speaker-name">Clint Cebulak</h3>
+				<p class="speak-pos"> Mentor </p>
+				<p class="speak-pos"> Director - Communications Design </p>
 			</div>
 		</div>
 	</div>
@@ -269,7 +291,6 @@
 		<br />
 		<br />
 	</div>
-	<div
 <script src="base.js"></script>
 <script src="faded.js"></script>
 </body>
