--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<div class="flex-container navbar"> 
 			<div >
 				<a class="nav-link" href="#about"> <button class="nav-title">about</h1> </button> </a>
+				<a class="nav-link" href="#schedule"> <button class="nav-title">schedule</button></a>
+				<a class="nav-link" href="#speakers"> <button class="nav-title">speakers</button></a>
 				<a class="nav-link" href="#faq"> <button class="nav-title">faq</h1> </button> </a>
 			</div>
 			<button type="button" class="apply-button"><a href="https://docs.google.com/forms/d/13u7Z0yp5TP48eB1WCdUyoLN05ROkW3h6H-IyBLBN5q4/viewform?edit_requested=true&fbclid=IwAR2ARlZzsqngPtn9d5vKQncePa5iC4ZlHrf4WNoybmHdhqhCm4QN_CmA_pQ" class="text-link-apply">apply here</a></button>
