centered sponsors and added links

--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
 		<h1 class="section-title"> sponsors 
 		</h1>
 		<div class="sponsorsflex flex-container">
-			<img class="sponsorimg" src="sponsor_logos/north.png"/>
-			<img class="sponsorimg" src="sponsor_logos/ticket.png"/>
-			<img class="sponsorimg" src="sponsor_logos/sketch.png"/>
-			<img class="sponsorimg" src="sponsor_logos/startup.png"/>
-			<img class="sponsorimg"src="sponsor_logos/linode.png" />
+			<a class="sponsorDivImg north" target="_blank" href="http://www.northropgrumman.com/"> </a>
+			<a class="sponsorDivImg ticket" target="_blank" href="https://www.ticketmaster.com/"> </a>
+			<a class="sponsorDivImg startup" target="_blank" href="https://startupucla.com/"> </a>
+			<a class="sponsorDivImg sketch" target="_blank" href="https://www.sketch.com/"> </a>
+			<a class="sponsorDivImg linode" target="_blank" href="https://www.linode.com/"> </a>
+			<a class="sponsorDivImg oa" target="_blank" href="https://oandapc.com/"> </a>
+
 		</div>
 	</div>
 <script src="base.js"></script>
