--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a class="nav-link" href="#speakers"> <button class="nav-title">speakers</button></a>
 				<a class="nav-link" href="#faq"> <button class="nav-title">faq</h1> </button> </a>
 			</div>
-			<button type="button" class="apply-button"><a href="https://docs.google.com/forms/d/13u7Z0yp5TP48eB1WCdUyoLN05ROkW3h6H-IyBLBN5q4/viewform?edit_requested=true&fbclid=IwAR2ARlZzsqngPtn9d5vKQncePa5iC4ZlHrf4WNoybmHdhqhCm4QN_CmA_pQ" class="text-link-apply">apply here</a></button>
+			<a href="https://docs.google.com/forms/d/13u7Z0yp5TP48eB1WCdUyoLN05ROkW3h6H-IyBLBN5q4/viewform?edit_requested=true&fbclid=IwAR2ARlZzsqngPtn9d5vKQncePa5iC4ZlHrf4WNoybmHdhqhCm4QN_CmA_pQ" class="apply-button">apply here</a>
 		</div>
 		<div class="home-img splashh">
 			<div id="circleHolder"> </div>
