Fixed nav bar completely

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="home flex-container">
 		<div class="flex-container navbar"> 
-			<div >
+			<div class="nav-buttonbar">
 				<a class="nav-link" href="#about"> <button class="nav-title">about</h1> </button> </a>
 				<a class="nav-link" href="#schedule"> <button class="nav-title">schedule</button></a>
 				<a class="nav-link" href="#speakers"> <button class="nav-title">speakers</button></a>
@@ -96,11 +96,11 @@
 						<td class="table_time"> <b> 5:00 PM </b> </td>
 						<td> closing ceremony </td>
 					</tr>
-				</tbody>
+				</body>
 			</table>
 			</div>
 			<div>
-					<div class="schedule_content_div" style="display: none;">
+					<div class="schedule_content_div" style="display: block;">
 						<h1> check-in </h1>
 						<h3 class="schedule_text"> Pastries and coffee will be provided for breakfast as participants check in for the event. </h3>
 					</div>
