--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 			<div id="speaker-card">
 				<div class="speaker-pic-container">
 					<img class="speaker-pics" src="speaker_pics/kelly.png">
-					<p class="speaker_hover_text_title">Northrop Grumman</h1>
-					<p class="speaker_hover_text">Sr Staff Engineer Judge</p>
+					<!-- <p class="speaker_hover_text_title">Northrop Grumman</h1>
+					<p class="speaker_hover_text">Sr Staff Engineer Judge</p> -->
 				</div>
 				<h3 id="speaker-name">Kelly Wald</h3>
 				<p class="speak-pos">UX Design Lead</p>
