corrected ticketmaster senior titles

--- a/index.html
+++ b/index.html
@@ -218,20 +218,20 @@
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/natalie_huynh.png">
 				<h3 id="speaker-name">Natalie Huynh</h3>
-				<p class="speak-pos"> Senior Designer </p>
+				<p class="speak-pos"> Sr. Designer </p>
 				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/julia_walck.png">
 				<h3 id="speaker-name">Julia Walck</h3>
-				<p class="speak-pos"> Senior Graphic Designer </p>
+				<p class="speak-pos"> Sr. Graphic Designer </p>
 				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/brandon_melchior.png">
 				<h3 id="speaker-name">Brandon Melchior</h3>
 				<p class="speak-pos"> Judge </p>
-				<p class="speak-pos"> Sr Director – Design </p>
+				<p class="speak-pos"> Sr. Director – Design </p>
 				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
