fixed animation resize

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
 </head>
-<body>
+<body onresize="resizeCircles()">
 	<div class="home flex-container">
 		<div class="flex-container navbar"> 
 			<div class="nav-buttonbar">
