--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet" type="text/css">
-
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
 </head>
