Sponsorship section complete except background color and text

--- a/index.html
+++ b/index.html
@@ -130,13 +130,15 @@
 				</div>
 				<div class="half-row" id="thiccBorderLeft">
 					<div class="half-row" id="thiccMargin">
-							<div class="box" id="noborder">
+							<div class="greenBox" id="noborder">
 								<div class="dogImage"></div>
 							</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div class="blueBox"></div>
+		<div class="earImage"></div>
 	</div>
 
 <script src="base.js"></script>
